// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authors can be created/edited/deleted: can be created 1`] = `
Object {
  "data": Object {
    "createAuthor": Object {
      "bio": Array [
        Object {
          "children": Array [
            Object {
              "text": "Author Bio Heading",
            },
          ],
          "type": "heading-one",
        },
        Object {
          "children": Array [
            Object {
              "text": "author bio text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "id": Any<String>,
      "image": null,
      "links": Array [
        Object {
          "title": "link 1",
          "url": "www.link1.ch",
        },
        Object {
          "title": "link 2",
          "url": "www.link2.ch",
        },
      ],
      "name": "John Grisham",
      "slug": "john-grisham",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Authors can be created/edited/deleted: can be deleted 1`] = `
Object {
  "data": Object {
    "deleteAuthor": Any<String>,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Authors can be created/edited/deleted: can be read by id 1`] = `
Object {
  "data": Object {
    "author": Object {
      "bio": Array [
        Object {
          "children": Array [
            Object {
              "text": "Test Bio",
            },
          ],
          "type": "heading-one",
        },
        Object {
          "children": Array [
            Object {
              "text": "bio text 😀",
            },
          ],
          "type": "paragraph",
        },
      ],
      "id": Any<String>,
      "image": null,
      "links": Array [
        Object {
          "title": "link 1",
          "url": "www.link1.ch",
        },
        Object {
          "title": "link 2",
          "url": "www.link2.ch",
        },
      ],
      "name": "JRR Tolkien",
      "slug": "tolkien-3",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Authors can be created/edited/deleted: can be read in list 1`] = `
Object {
  "data": Object {
    "authors": Object {
      "nodes": Array [
        Object {
          "bio": Array [
            Object {
              "children": Array [
                Object {
                  "text": "Test Bio",
                },
              ],
              "type": "heading-one",
            },
            Object {
              "children": Array [
                Object {
                  "text": "bio text 😀",
                },
              ],
              "type": "paragraph",
            },
          ],
          "id": Any<String>,
          "image": null,
          "links": Array [
            Object {
              "title": "link 1",
              "url": "www.link1.ch",
            },
            Object {
              "title": "link 2",
              "url": "www.link2.ch",
            },
          ],
          "name": "JRR Tolkien",
          "slug": "tolkien-2",
        },
        Object {
          "bio": Array [
            Object {
              "children": Array [
                Object {
                  "text": "Author Bio Heading",
                },
              ],
              "type": "heading-one",
            },
            Object {
              "children": Array [
                Object {
                  "text": "author bio text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "id": Any<String>,
          "image": null,
          "links": Array [
            Object {
              "title": "link 1",
              "url": "www.link1.ch",
            },
            Object {
              "title": "link 2",
              "url": "www.link2.ch",
            },
          ],
          "name": "John Grisham",
          "slug": "john-grisham",
        },
        Object {
          "bio": Array [
            Object {
              "children": Array [
                Object {
                  "text": "Test Bio",
                },
              ],
              "type": "heading-one",
            },
            Object {
              "children": Array [
                Object {
                  "text": "bio text 😀",
                },
              ],
              "type": "paragraph",
            },
          ],
          "id": Any<String>,
          "image": null,
          "links": Array [
            Object {
              "title": "link 1",
              "url": "www.link1.ch",
            },
            Object {
              "title": "link 2",
              "url": "www.link2.ch",
            },
          ],
          "name": "JRR Tolkien",
          "slug": "tolkien-0",
        },
      ],
      "pageInfo": Object {
        "endCursor": Any<String>,
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": Any<String>,
      },
      "totalCount": Any<Number>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Authors can be created/edited/deleted: can be updated 1`] = `
Object {
  "data": Object {
    "updateAuthor": Object {
      "bio": null,
      "id": Any<String>,
      "image": null,
      "links": Array [
        Object {
          "title": "homepage",
          "url": "www.j-a.com",
        },
      ],
      "name": "Jane Austen",
      "slug": "j-austen",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
